<resources>
    <string name="app_name">RecyclerProject</string>
    <string name="list_view_h">List View H</string>
    <string name="list_view_v">List View V</string>
    <string name="grid_view">Grid View</string>
    <string name="scrable_grid_view">Scrable Grid View</string>
    <string name="some_date">Some date</string>
    <string name="add_people">Add People</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
</resources>
